# RitangleChallenges

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Containerfile  Dockerfile  devcontainer.json  starship.toml
stage_one_challenge_six/: Cargo.toml  a
stage_one_challenge_six/src/: main.rs
stage_one_puzzle/: Cargo.toml  result
stage_one_puzzle/src/: grid.rs  lookup_tables.rs  main.rs  primes.rs  rules.rs
stage_one_puzzle/src/puzzle/: mod.rs  position.rs
stage_one_puzzle/src/rules/: mod.rs  p.rs  q.rs  r.rs  result.rs  s.rs
stage_one_puzzle/src/us/: cb_2018_us_state_20m.geojson  mod.rs  state.rs
stage_two_challenge_eight/: Cargo.toml
stage_two_challenge_eight/src/: main.rs
stage_two_challenge_six/: Cargo.toml
stage_two_challenge_six/src/: main.rs
stage_two_challenge_three/: Cargo.toml
stage_two_challenge_three/src/: main.rs
stage_two_question_five/: Cargo.toml
stage_two_question_five/src/: main.rs  point.rs  triangle.rs
stage_two_question_seven/: Cargo.toml
stage_two_question_seven/src/: main.rs
the_finale/: Cargo.toml
the_finale/src/: main.rs
the_finale/src/challenges/: mod.rs  number_soup.rs  triangles.rs
the_finale/src/lookup_tables/: coprimes.rs  mod.rs  primes.rs  pythagorean_triples.rs  square.rs  triangular.rs
the_finale/src/puzzle/: mod.rs  position.rs  wall.rs
the_finale/src/rules/: executor.rs  mod.rs
the_finale/src/rules/triangles/: mod.rs  pythagorean_triangle.rs  square.rs  triangle_trio.rs
