[workspace]
resolver = "2"
members = [
    "stage_one_challenge_six",
    "stage_one_puzzle",
    "stage_two_challenge_eight",
    "stage_two_challenge_six",
    "stage_two_challenge_three", "stage_two_question_five", "stage_two_question_seven", "the_finale",
]

[profile.release]
overflow-checks = true

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
