[package]
name = "stage_one_puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
geo = "0.29.2"
geojson = "0.24.1"
rayon = "1.10.0"

[profile.release]
overflow-checks = true

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
